# Zaybot_robot

./: .gitignore  README.md
src/zaybot_bringup/: package.xml  setup.cfg  setup.py
src/zaybot_bringup/launch/: navigation_bringup.launch.py  slam_bringup.launch.py
src/zaybot_description/: CMakeLists.txt  package.xml
src/zaybot_description/launch/: display.launch.py
src/zaybot_description/rviz/: display.rviz
src/zaybot_description/urdf/: zaybot.urdf
src/zaybot_gazebo/: package.xml  setup.cfg  setup.py
src/zaybot_gazebo/launch/: simulation.launch.py  teleop.launch.py
src/zaybot_gazebo/models/zaybot_v2/: model.config  model.sdf
src/zaybot_gazebo/worlds/: empty.world  garage.world
src/zaybot_gazebo/zaybot_gazebo/: odom_to_tf.py
src/zaybot_mpc_controller/: CMakeLists.txt  README.md  mpc_controller_plugin.xml  package.xml
src/zaybot_mpc_controller/config/: mpc_params.yaml
src/zaybot_mpc_controller/include/zaybot_mpc_controller/: mpc_controller.hpp  mpc_controller_plugin.hpp  path_handler.hpp  robot_model.hpp
src/zaybot_mpc_controller/src/: mpc_controller.cpp  mpc_controller_plugin.cpp  path_handler.cpp  robot_model.cpp
src/zaybot_navigation/: CMakeLists.txt  package.xml
src/zaybot_navigation/config/: nav2_params.yaml
src/zaybot_navigation/launch/: navigation.launch.py
src/zaybot_navigation/maps/: mapa.pgm  mapa.yaml
src/zaybot_navigation/rviz/: navigation.rviz
src/zaybot_slam/: package.xml  setup.cfg  setup.py
src/zaybot_slam/config/: slam_params.yaml
src/zaybot_slam/launch/: save_map.launch.py  slam.launch.py
src/zaybot_slam/rviz/: slam.rviz
src/zaybot_teleop_gui/: package.xml  setup.cfg  setup.py
src/zaybot_teleop_gui/launch/: teleop_gui.launch.py
src/zaybot_teleop_gui/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/zaybot_teleop_gui/zaybot_teleop_gui/: main.py  main_window.py  ros_node.py
src/zaybot_teleop_gui/zaybot_teleop_gui/widgets/: joystick_mode.py  keyboard_mode.py  slider_mode.py
