<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zaybot_gazebo</name>
  <version>1.0.0</version>
  <description>Zaybot Gz Sim simulation launch files for ROS2 Humble</description>
  <maintainer email="zayanabdullahzamir@gmail.com">Zayan Zamir</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>zaybot_description</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
