<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zaybot_teleop_gui</name>
  <version>0.1.0</version>
  <description>Modular teleoperation GUI for ROS 2 with multiple control modes. Initially developed for the Zaybot robot but adaptable to any robot using geometry_msgs/Twist.</description>
  <maintainer email="zayanabdullahzamir@gmail.com">Zayan Zamir</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
